--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-fastai==2.7.18
-fastcore==1.5.55
-fasttransform==0.0.2
-torch==2.3.1
-torchvision==0.18.1
-gradio==4.44.1
-gradio_client==1.3.0
-huggingface_hub
+fastai
+torch
+torchvision
+pillow
